implementation of movies votes by movie rating

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </form>
 </header>
 <div id="content"></div>
-
+<footer><p>&copy; 2023 Treading Movie.All Rights Reserved</p></footer>
 </body>
 </html>
