--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <form id="form"><label>
         <input type="text"
         id="search"
-        placeholder="search for a movie,tv show,person"
+        placeholder="search"
         class="search">
     </label>
     </form>
